--- a/style.css
+++ b/style.css
@@ -1,33 +1,66 @@
 body{
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
-    grid-template-rows: 1fr 1fr 1fr 1fr;
+    grid-template-rows: 25% 25% 25% 25%;
     background-image: url(./pad\ thai.png);
     background-repeat: no-repeat;
-    background-size: ;
+    background-size: 100%;
 }
 header{
     background-color: #D9D9D9;
     border-radius: 50px;
-    column-span: 1/3;
+    grid-column-start: 1;
+    grid-column-end: 4;
+    max-height: 100px;
 }
 #instr{
     background-color: #D9D9D9;
     border-radius: 50px;
+    text-align: center;
+    grid-column-start: 2;
+    grid-column-end: 4;
+    grid-row-start: 2;
+    grid-row-end: 4;
 }
 nav{
     background-color: #D9D9D9;
     border-radius: 50px;
+    text-align: center;
+    grid-column-start: 1;
+    grid-column-end: 2;
+    grid-row-start: 2;
 }
 aside{
     background-color: #D9D9D9;
     border-radius: 50px;
-    align-items: center;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    grid-column-start: 4;
+    grid-column-end: 6;
+    grid-row-start: 1;
+    grid-row-end: 3;
 }
 footer{
     background-color: #D9D9D9;
     border-radius: 50px;
+    grid-column-start: 1;
+    grid-column-end: 6;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
 }
 img{
     border-radius: 50px;
+}
+ul{
+    text-align: left;
+}
+ol{
+    text-align: left;
+}
+#estet{
+    grid-column-start: 5;
+    grid-row-start: 3;
 }
