--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body{
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
     grid-template-rows: 25% 25% 25% 25%;
     background-image: url(./pad\ thai.png);
     background-repeat: no-repeat;
@@ -12,6 +12,10 @@ header{
     grid-column-start: 1;
     grid-column-end: 4;
     max-height: 100px;
+    margin: 5px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
 }
 #instr{
     background-color: #D9D9D9;
@@ -20,7 +24,8 @@ header{
     grid-column-start: 2;
     grid-column-end: 4;
     grid-row-start: 2;
-    grid-row-end: 4;
+    grid-row-end: 4;    
+    margin: 5px;
 }
 nav{
     background-color: #D9D9D9;
@@ -29,6 +34,8 @@ nav{
     grid-column-start: 1;
     grid-column-end: 2;
     grid-row-start: 2;
+    grid-row-end: 4;
+    margin: 5px;
 }
 aside{
     background-color: #D9D9D9;
@@ -38,29 +45,56 @@ aside{
     flex-direction: column;
     justify-content: center;
     grid-column-start: 4;
-    grid-column-end: 6;
     grid-row-start: 1;
-    grid-row-end: 3;
+    grid-row-end: 2;
+    min-height: 350px;
+    max-width: 250px;
+    margin: 5px;
 }
 footer{
     background-color: #D9D9D9;
     border-radius: 50px;
     grid-column-start: 1;
-    grid-column-end: 6;
+    grid-column-end: 5;
     display: flex;
     flex-direction: row;
     justify-content: space-around;
+    margin: 5px;
+    max-height: 75px;
 }
-img{
-    border-radius: 50px;
-}
+
 ul{
     text-align: left;
 }
 ol{
     text-align: left;
 }
-#estet{
-    grid-column-start: 5;
+.estet{
+    grid-column-start: 4;
+    grid-column-end: 5;
     grid-row-start: 3;
+    border-radius: 150px;
+    min-width: 250px;
+    max-height: 300px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+#sid{
+    max-width: 200px;
+    max-height: 150px;
+    scale: 1.25 1;
+    border-radius: 50px;
+    align-self: center;
+}
+#estet{
+    rotate: 90deg;
+    border-radius: 100px;
+    max-width: 120px;
+    max-height: 250px;
+    align-self: center;
+}
+#logo{
+    max-width: 100px;
+    max-height: 100px;
 }
