--- a/style.css
+++ b/style.css
@@ -1,10 +1,14 @@
+html{
+    height: 100%;
+}
 body{
+    height: 100%;
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
+    grid-template-columns: 25% 25% 15% 35%;
     grid-template-rows: 25% 25% 25% 25%;
     background-image: url(./pad\ thai.png);
     background-repeat: no-repeat;
-    background-size: 100%;
+    background-size: cover;
 }
 header{
     background-color: #D9D9D9;
@@ -12,10 +16,12 @@ header{
     grid-column-start: 1;
     grid-column-end: 4;
     max-height: 100px;
-    margin: 5px;
+    margin: 10px;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    padding-left: 15px;
+    margin-top: 50px;
 }
 #instr{
     background-color: #D9D9D9;
@@ -25,7 +31,11 @@ header{
     grid-column-end: 4;
     grid-row-start: 2;
     grid-row-end: 4;    
-    margin: 5px;
+    margin: 10px;
+    margin-left: 20px;
+    margin-right: 20px;
+    /*max-height: 400px;
+    min-width: 450px;*/
 }
 nav{
     background-color: #D9D9D9;
@@ -35,7 +45,8 @@ nav{
     grid-column-end: 2;
     grid-row-start: 2;
     grid-row-end: 4;
-    margin: 5px;
+    margin: 10px;
+    margin-left: 20px;
 }
 aside{
     background-color: #D9D9D9;
@@ -46,21 +57,25 @@ aside{
     justify-content: center;
     grid-column-start: 4;
     grid-row-start: 1;
-    grid-row-end: 2;
-    min-height: 350px;
-    max-width: 250px;
-    margin: 5px;
+    grid-row-end: 3;
+    margin: 10px;
+    margin-left: 20px;
+    margin-top: 50px;
+    /*max-width: 400px;*/
+    justify-self: center;
 }
 footer{
     background-color: #D9D9D9;
     border-radius: 50px;
     grid-column-start: 1;
     grid-column-end: 5;
+    grid-row-start: 4;
     display: flex;
     flex-direction: row;
     justify-content: space-around;
-    margin: 5px;
-    max-height: 75px;
+    margin: 10px;
+    align-self: center;
+    padding: 40px;
 }
 
 ul{
@@ -78,7 +93,8 @@ ol{
     max-height: 300px;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: center;
+    margin: 10px;
 }
 #sid{
     max-width: 200px;
@@ -90,8 +106,8 @@ ol{
 #estet{
     rotate: 90deg;
     border-radius: 100px;
-    max-width: 120px;
-    max-height: 250px;
+    max-width: auto;
+    max-height: 200px;
     align-self: center;
 }
 #logo{
